@@ -1,3 +1,7 @@
+2020-12-15  Dmitry V. Levin  <ldv@altlinux.org>
+
+	* Makefile.am: Remove.
+
 2019-10-28  Aaron Merey  <amerey@redhat.com>
 
 	* ax_check_compile_flag.m4, ax_cxx_compile_stdcxx.m4: New files.
